--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import Card from "../components/card.astro";
+import Card from "../components/Card.astro";
 import logos from "../images/framework-logos.png";
 import logosSmall from "../images/framework-logos-small.png";
 ---
