--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import Tabs from "../components/tabs.astro";
   <section class="page-content">
     <div class="container">
       <h2>Get Started With Astro</h2>
-      <p>Get a new Astro project up and running locally with our helpful create-astro CLI wizard!</p>
+      <p class="font-bold">Get a new Astro project up and running locally with our helpful create-astro CLI wizard!</p>
 
       <!--Optional active color change example: <Tabs activeTextColor="blue" /> -->
 
